--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/reset.css' %}">
     <title> {% block titulo %} {% endblock %} </title>
 </head>
 <body>
-    {% block main %}
-    {% endblock %}
+    <div class="cabecalho">
+        <ul class="menu">
+            <li><img src="{% static 'img/logo.png' %}" alt="Logotipo"/></li>
+            <li><img src="{% static 'img/cadastro.png' %}" alt="Cadastro"></li>
+        </ul>
+    </div>
+    <main class="content">
+        {% block main %}
+        {% endblock %}
+    </main>
+    <footer class="footer">
+    </footer>
 </body>
 </html>
