Listando e excluindo ok, cadastrando - falta a imagem

--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -14,7 +14,7 @@
             <td>{{ usuario.nome }}</td>
             <td>{{ usuario.data_nasc }}</td>
             <td>{{ usuario.email }}</td>
-            <td><img src="{{ usuario.foto.url }}" alt="Foto usuário" class="foto-usuario"/></td>
+            <td><img src="{{ usuario.foto.url }}" alt="Foto usuário" class="icon"/></td>
             <td><a href="delete/{{ usuario.id }}">Deletar</a></td>
         </tr>
     </tbody>
