--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,41 +1,43 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
 }
-body{
+html, body{
     width: 100%;
     height: 100%;
     overflow-x: hidden;
 }
-.cabecalho{
-    position: relative;
+.header{
     width: 100%;
-    background-color: #f5f5f5;
-    box-shadow: 2px 2px 5px black;
-    padding: 10px;
-    margin-bottom: 10px;
+    position: relative;
+    background-color: white;
+    padding:10px;
+    box-shadow: 2px 2px 10px black;
 }
 ul.menu{
     list-style: none;
-    padding: 10px;
+    width: 100%;
 }
 ul.menu li{
-    display: inline;
-    padding:15px;
-    cursor: pointer;
+    display: inline-block;
+    padding:5px;
     border-bottom:1px solid black;
+    cursor: pointer;
 }
-
-.logo{
-    position: relative;
+ul.menu li:hover{
+    display: inline-block;
+    padding:5px;
+    border-bottom:1px solid dodgerblue;
+    background-color: floralwhite;
     cursor: pointer;
 }
 .content{
     width: 100%;
+    margin-top: 50px;
     position: relative;
     background-color: ghostwhite;
     padding: 15px;
 }
-img.foto-usuario{
+img.icon{
     width: 50px;
     height: 50px;
 }
