Listando, Excluindo e Cadastrando ok

--- a/homepage/templates/cadastro.html
+++ b/homepage/templates/cadastro.html
@@ -2,7 +2,7 @@
 {% block titulo %} Cadastro {% endblock %}
 
 {% block main %}
-<form method="POST">
+<form enctype="multipart/form-data" method="POST">
 {% csrf_token %}
     {{ form.as_p }}
 <input type="submit" value="Enviar">
