--- a/homepage/templates/cadastro.html
+++ b/homepage/templates/cadastro.html
@@ -6,5 +6,6 @@
 {% csrf_token %}
     {{ form.as_p }}
 <input type="submit" value="Enviar">
+<button><a href="/lista">Voltar</a></button>
 </form>
 {% endblock %}
