--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -4,9 +4,10 @@
 
 {% block main %}
 <table class="tabela">
-    <caption>Lista de Usuários</caption>
     <thead>
-        <th>Nome</th><th>Data nascimento</th><th>Email</th><th>Foto</th>
+        <th>Nome</th><th>Data nascimento</th>
+        <th>Email</th><th>Foto</th>
+        <th class="conf"></th><th class="conf"></th>
     </thead>
     {% for usuario in usuarios %}
     <tbody>
@@ -15,7 +16,8 @@
             <td>{{ usuario.data_nasc }}</td>
             <td>{{ usuario.email }}</td>
             <td><img src="{{ usuario.foto.url }}" alt="Foto usuário" class="icon"/></td>
-            <td><a href="delete/{{ usuario.id }}">Deletar</a></td>
+            <td class="conf"><a href="/lista/delete/{{ usuario.id }}">Deletar</a></td>
+            <td class="conf"><a href="/lista/alterar/{{ usuario.id }}">Alterar</a></td>
         </tr>
     </tbody>
     {% endfor %}
