--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,8 +10,7 @@ html, body{
     width: 100%;
     position: relative;
     background-color: white;
-    padding:10px;
-    box-shadow: 2px 2px 10px black;
+    border-bottom: 1px solid lightslategray;
 }
 ul.menu{
     list-style: none;
@@ -19,22 +18,23 @@ ul.menu{
 }
 ul.menu li{
     display: inline-block;
-    padding:5px;
+    padding:10px;
     border-bottom:1px solid black;
     cursor: pointer;
 }
 ul.menu li:hover{
     display: inline-block;
-    padding:5px;
-    border-bottom:1px solid dodgerblue;
-    background-color: floralwhite;
+    padding:10px;
+    border-bottom:1px solid white;
+    background-color: steelblue;
     cursor: pointer;
 }
 .content{
-    width: 100%;
-    margin-top: 50px;
+    margin:50px auto;
     position: relative;
-    background-color: ghostwhite;
+    background-color: #d9d9d9;
+    border: 1px solid darkgray;
+    border-radius: 10px;
     padding: 15px;
 }
 img.icon{
@@ -44,7 +44,62 @@ img.icon{
 table.tabela{
     margin: 10px auto;
 }
-table.tabela td, th{
-    padding:10px;
+table.tabela th, table.tabela td{
+    padding:20px;
+    vertical-align: middle;
     text-align: center;
+    border-bottom: 1px solid darkgray;
+}
+table.tabela tr:hover{
+    padding: 20px;
+    vertical-align: middle;
+    text-align: center;
+    background-color: white;
+}
+.conf, th{
+    background-color: steelblue;
+    color:whitesmoke;
+}
+table.tabela-alterar{
+    position: relative;
+    width: 70%;
+    display:inline-block;
+    float:left;
+    left:10px;
+    background-color: gainsboro;
+}
+table.tabela-alterar td{
+    padding:10px;
+    vertical-align: middle;
+    text-align: left;
+}
+.div-img{
+    position: relative;
+    vertical-align: middle;
+    display: inline-block;
+    width: 100px; 
+    height: 100px;
+    float: right;
+    right:50px;
+    background-color: gainsboro;
+}
+img.img-perfil{
+    position: relative;
+    margin:0 auto;
+    width: 100%;
+    height: 100%;
+}
+fieldset.fieldset-info{
+    width: 80%;
+    margin: 10px auto;
+    padding-bottom:5px;
+    border: 1px solid darkgray;
+}
+legend{
+    text-align: center;
+}
+input[type="file"].img-perfil{
+    width: 100px;
+    height: 100px;
+    background-image: url('../img/default.png');
 }
