--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,8 @@
 <body>
     <div class="header">
         <ul class="menu">
-            <li><a href="/"><img src="{% static 'img/logo.png' %}" alt="Home" class="icon"/></a></li>
-            <li><a href="cadastro"><img src="{% static 'img/cadastro.png' %}" alt="Cadastro" class="icon"/></a></li>
+            <li><a href="/lista" title="Home"><img src="{% static 'img/logo.png' %}" alt="Home" class="icon"/></a></li>
+            <li><a href="/lista/cadastro" title="Ir para Cadastro"><img src="{% static 'img/cadastro.png' %}" alt="Cadastro" class="icon"/></a></li>
         </ul>
     </div>
     <main class="content">
