--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,22 +19,20 @@ ul.menu{
 ul.menu li{
     display: inline-block;
     padding:10px;
-    border-bottom:1px solid black;
+    border-bottom:1px solid steelblue;
     cursor: pointer;
 }
 ul.menu li:hover{
     display: inline-block;
     padding:10px;
-    border-bottom:1px solid white;
+    border-bottom:1px solid black;
     background-color: steelblue;
     cursor: pointer;
 }
 .content{
     margin:50px auto;
     position: relative;
-    background-color: #d9d9d9;
     border: 1px solid darkgray;
-    border-radius: 10px;
     padding: 15px;
 }
 img.icon{
@@ -54,57 +52,32 @@ table.tabela tr:hover{
     padding: 20px;
     vertical-align: middle;
     text-align: center;
-    background-color: white;
+    background-color: rgb(218, 218, 218);
 }
 .conf, th{
     background-color: steelblue;
     color:whitesmoke;
 }
-/* table.tabela-alterar{
+p{
     position: relative;
-    width: 70%;
-    display:inline-block;
-    float:left;
-    left:10px;
-    background-color: gainsboro;
+    width: 550px;
+    margin-left: auto;
+    margin-right: auto;
 }
-table.tabela-alterar td{
-    padding:10px;
-    vertical-align: middle;
-    text-align: left;
-}
-.div-img{
-    position: relative;
-    vertical-align: middle;
+p label, input[type="text"], [type="email"]{
     display: inline-block;
-    width: 100px; 
-    height: 100px;
-    float: right;
-    right:50px;
-    background-color: gainsboro;
-}
-img.img-perfil{
-    position: relative;
     margin:0 auto;
-    width: 100%;
-    height: 100%;
+    padding: 5px;
+    margin:5px;
+    width: 200px;
 }
-fieldset.fieldset-info{
-    width: 80%;
-    margin: 10px auto;
-    padding-bottom:5px;
-    border: 1px solid darkgray;
+p input[type="file"]{
+    padding: 5px;
+    margin:5px;
 }
-legend{
-    text-align: center;
+p input[type="checkbox"], p label[for="foto-clear_id"]{
+    display: none;
 }
-input[type="file"].img-perfil{
-    width: 100px;
-    height: 100px;
-    background-image: url('../img/default.png');
-}
-input[type="text"], [type="email"], [type="date"]{
-    width: 100%;
+select{
     padding:5px;
-    border: 0px;
-} */
+}
